# waves_sim

./: .gitignore  CMakeLists.txt
examples/: beats.sim  dipole.sim  media_transmission_reflection.sim  pcb_traces.sim  pcb_traces2.sim  phased_array.sim  plane_refraction.sim  rotating_quadpole.sim  total_internal_reflection.sim
imgui/: CMakeLists.txt
shaders/: display.frag  handle.frag  object.frag  screen_cover.vert  vertex.vert  wave_sim.frag
src/: CMakeLists.txt  geometry.cpp  geometry.hpp  main.cpp  main.hpp  space.hpp  web_shell.html
